# ecom-prod-assistant

./: .gitignore  Dockerfile  README.md  get_lib_version.py  pyproject.toml  requirements.txt  scrapper_ui.py
.github/workflows/: deploy.yml
k8/: deployment.yaml
notebook/: testing.ipynb
prod_assistant/config/: config.yaml
prod_assistant/etl/: data_ingestion.py  data_scrapper.py
prod_assistant/evaluation/: ragas_eval.py
prod_assistant/mcp_servers/: client.py  product_search_server.py
prod_assistant/retriever/: retrieval.py
prod_assistant/utils/: model_loader.py
router/: main.py
templates/: chat.html  index.html
workflow/: agentic_rag_workflow.py
