[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-prod-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []



[tool.setuptools.packages.find]
include = ["prod_assistant*"]
exclude = ["data*", "logs*", "notebook*", "static*", "templates*"]